Setup GithubAction, remove TravisCI.

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,30 @@
         <url>https://github.com/CharLemAznable/guardians-core</url>
     </scm>
 
+    <repositories>
+        <repository>
+            <id>central</id>
+            <url>https://repo1.maven.org/maven2/</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>sonatype</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
+
+    <properties>
+        <sonar.projectKey>CharLemAznable_guardians-core</sonar.projectKey>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>com.github.charlemaznable</groupId>
