--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.github.charlemaznable</groupId>
             <artifactId>logback-dendrobe</artifactId>
             <scope>test</scope>
